
syntax = "proto3";

option go_package = "/dpeloyerpb";

package dpeloyerpb;

message DeployRequest {
  string Version     = 1;
  string RepoUrl     = 2;
  string RepoName    = 3;
  string Namespace   = 4;
  string ChartName   = 5;
  string ReleaseName = 6;
  string ReferenceID = 7;
  string Plugin      = 8;
}

message DeployResponse {
  string Status                           = 1;
  WorkFlowResponse WorkFlowResponseStatus = 2;
}

message WorkFlowResponse {
  string WorkflowID = 1;
  string WorkFlowRunID = 2;
}